generate stub for new apis
