# backend/openapi.yml
@@ -106,6 +106,26 @@ paths:
 
   # if needed, add 'get'
   /trade/{id}:
+    get:
+      summary: get a trade with requests
+      operationId: getTradeById
+      tags:
+        - trade
+      parameters:
+        - name: id
+          in: path
+          description: trade id
+          required: true
+          schema:
+            $ref: "#/components/schemas/trade_id"
+      responses:
+        "200":
+          description: success to get
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Trade"
+
     delete:
       summary: cancel a trade
       operationId: deleteTrade
@@ -146,6 +166,28 @@ paths:
                 $ref: "#/components/schemas/Trade"
 
   /trade/requests:
+    get:
+      summary: get requests by user id
+      operationId: getTradeRequestsByUserId
+      tags:
+        - trade
+      parameters:
+        - name: id
+          in: path
+          description: user id
+          required: true
+          schema:
+            $ref: "#/components/schemas/user_id"
+      responses:
+        "200":
+          description: success to post
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/TradeRequest"
+
     post:
       summary: post a new trade request
       operationId: postTradeRequest
@@ -165,6 +207,26 @@ paths:
                 $ref: "#/components/schemas/TradeRequest"
 
   /trade/request/{id}:
+    get:
+      summary: get a trade request
+      operationId: getTradeRequest
+      tags:
+        - trade
+      parameters:
+        - name: id
+          in: path
+          description: trade request id
+          required: true
+          schema:
+            $ref: "#/components/schemas/trade_request_id"
+      responses:
+        "200":
+          description: success to get
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TradeRequest"
+
     delete:
       summary: cancel a trade request
       operationId: deleteTradeRequest
